maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:43: error: not found: type i
    if (indics[i]+1 < i) i = indics[i]+1;
               ^ShortestPathMaze:43: error: variable indics of type List[Int] does not take type parameters.
    if (indics[i]+1 < i) i = indics[i]+1;
              ^ShortestPathMaze:43: error: reassignment to val
    if (indics[i]+1 < i) i = indics[i]+1;
                           ^